--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
+# Add any directories, files, or patterns you don't want to be tracked by version control
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
 /.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea/libraries
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-.cxx
-local.properties
+/.idea
